--- a/Medical/style.css
+++ b/Medical/style.css
@@ -1,18 +1,27 @@
 /* body{
     margin: 25px;
-}
+} */
 
 .certificate{
     text-align: center;
-} */
+}
 table{
-    empty-cells: hide;
+    /* empty-cells: hide; */
+    padding: 10px 10px;
 }
 .table1{
     margin-left: 19px;
 }
 .table2{
     margin-left: -31px;
+}
+.table3{
+    margin-left: 34px;
+    margin-top: 0px;
+}
+.table3 tr td{
+    width: 1078px;
+    height: 40px;
 }
 .lebar{
     width: 60px;
@@ -35,6 +44,15 @@ table{
 .tinggi6{
     height: 73px;
 }
+.tinggi7{
+    height: 40px;
+}
+.tinggi8{
+    height: 63px;
+}
 .teks{
     text-align: right;
+}
+.image{
+    height: 100px;
 }
